# Dedispersion

./: CMakeLists.txt  Makefile  Makefile.inc  README.md
analysis/: analysis.py  config.py.orig  dedispersion.py  export.py  main.py  manage.py  speedup.py
experiments/: Makefile  dedispersionMemoryUsage.cpp  scaleDedispersionCPU.cpp
include/: Dedispersion.hpp  DedispersionAVX.hpp  DedispersionCPU.hpp  DedispersionNoLocal.hpp  DedispersionPhi.hpp  Shifts.hpp  ShiftsCPU.hpp  configuration.hpp
src/: Dedispersion.cpp  DedispersionTest.cpp  DedispersionTuning.cpp  Makefile  Shifts.cpp  SubbandDedispersionTest.cpp  SubbandDedispersionTuning.cpp  generatorSIMD.cpp  printCode.cpp  printShifts.cpp  printTimeSeries.cpp
tests/: Dedispersion.cpp  DedispersionCPU.cpp  DedispersionSIMD.cpp  Makefile
tuning/: Dedispersion.cpp  DedispersionAVX.cpp  DedispersionSIMD.cpp  Makefile
utils/: Makefile  dedispersionMemoryUsage.cpp  generator.cpp
